--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .body {
-  background-color: #f8f7fd;
   font-family: Roboto, sans-serif;
 }
 header {
@@ -13,19 +12,16 @@ main {
   padding: 30px 0px;
 }
 .weather-app {
-  background-color: white;
-  max-width: 600px;
-  margin: 60px auto;
   box-shadow: rgba(65, 50, 100, 0.08) 0px 30px 50px;
   border-radius: 16px;
-  padding: 50px;
+  padding: 40px;
 }
 .logo{
   display: block;
     max-width: 150px;
    padding-bottom: 40px;
 }
-.weather-form-search {
+/* .weather-form-search {
   width: 80%;
   background-color: rgb(249, 247, 254);
   border: none;
@@ -41,7 +37,7 @@ main {
   font-size: 16px;
   background: rgb(136, 93, 241);
   margin-left: 3px;
-}
+} */
 .main-body {
   display: flex;
   justify-content: space-between;
@@ -62,14 +58,11 @@ strong {
   color: rgb(246, 82, 130);
   font-weight: bold;
 }
-.weather-temperature-body {
+/* .weather-temperature-body {
   display: flex;
   justify-content:space-between;
-}
-.icon{
-  /* padding: 0px 10px 0px; */
-  margin-top: 10px;
-}
+} */
+
 .weather-temperature {
   font-size: 80px;
   line-height: 88px;
@@ -85,36 +78,28 @@ strong {
   font-size: 30px;
 }
 
-.weather-forcasts {
+/* .weather-forcasts {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
-}
+} */
 
 .weather-day {
   display: block;
   
 }
 
-.weather-date {
+/* .weather-date {
   color: rgba(39, 33, 66, 0.4);
   text-align: center;
   font-size: 16px;
   padding: 10px;
   line-height: 20px;
-}
-.weather-image {
-  font-size: 16px;
+} */
+/* .weather-image {
   text-align: center;
   padding: 10px;
-}
-.temperatures {
-  display: flex;
-  justify-content: center;
-  color: #f65282;
-  margin-top: 10px;
-  text-align: center;
-}
+} */
 .temperature-unit {
   padding: 0 8px;
 }
